--- a/elements.html
+++ b/elements.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="assets/hover/css/hover-min.css">
     <link rel="stylesheet" type="text/css" href="assets/odometer/css/odometer-theme-default.css">
     <link rel="stylesheet" type="text/css" href="assets/jquery-nice-select/css/nice-select.css">
+    <link rel="stylesheet" type="text/css" href="assets/video/video-js.css">
     <link rel="stylesheet" type="text/css" href="assets/popup/magnific-popup.css">
     <link rel="stylesheet" type="text/css" href="assets/swiper/css/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="assets/nouislider/nouislider.min.css">
@@ -989,6 +990,7 @@
     <script src="assets/marquee/jquery.marquee.min.js"></script>
     <!-- For counterUp -->
     <script src="assets/odometer/js/odometer.min.js"></script>
+    <script src="assets/video/video.min.js"></script>
     <script src="assets/countdown/jquery.countdown.min.js"></script>
     <script src="assets/nouislider/nouislider.min.js"></script>
     <script src="assets/wnumb/wNumb.js"></script>
