--- a/single-element.html
+++ b/single-element.html
@@ -1501,7 +1501,7 @@
                                                         poster="images/elements/local-video.jpg"
                                                         data-setup="{}"
                                                     >
-                                                        <source src="/video/fish.mp4" type="video/mp4" />
+                                                        <source src="video/fish.mp4" type="video/mp4" />
                                                         <p class="vjs-no-js">
                                                         To view this video please enable JavaScript, and consider upgrading to a
                                                         web browser that
