--- a/multi-docs.html
+++ b/multi-docs.html
@@ -488,9 +488,9 @@
                                                 <a href="">Elements</a>
                                             </h3>
                                         </div>
-                                        <span class="number-of-article">
+                                        <a href="" class="number-of-article">
                                             8 articles
-                                        </span>
+                                        </a>
                                     </div>
                                     <div class="explore-topics-body">
                                         <ul class="explore-topics-list">
@@ -521,9 +521,9 @@
                                                 <a href="">Content</a>
                                             </h3>
                                         </div>
-                                        <span class="number-of-article">
+                                        <a href="" class="number-of-article">
                                             8 articles
-                                        </span>
+                                        </a>
                                     </div>
                                     <div class="explore-topics-body">
                                         <ul class="explore-topics-list">
@@ -553,9 +553,9 @@
                                                 <a href="">Layouts</a>
                                             </h3>
                                         </div>
-                                        <span class="number-of-article">
+                                        <a href="" class="number-of-article">
                                             8 articles
-                                        </span>
+                                        </a>
                                     </div>
                                     <div class="explore-topics-body">
                                         <ul class="explore-topics-list">
@@ -587,9 +587,9 @@
                                                 <a href="">Change Logs</a>
                                             </h3>
                                         </div>
-                                        <span class="number-of-article">
+                                        <a href="" class="number-of-article">
                                             8 articles
-                                        </span>
+                                        </a>
                                     </div>
                                     <div class="explore-topics-body">
                                         <ul class="explore-topics-list">
@@ -619,9 +619,9 @@
                                                 <a href="">Blog Post</a>
                                             </h3>
                                         </div>
-                                        <span class="number-of-article">
+                                        <a href="" class="number-of-article">
                                             8 articles
-                                        </span>
+                                        </a>
                                     </div>
                                     <div class="explore-topics-body">
                                         <ul class="explore-topics-list">
@@ -651,9 +651,9 @@
                                                 <a href="">Footer</a>
                                             </h3>
                                         </div>
-                                        <span class="number-of-article">
+                                        <a href="" class="number-of-article">
                                             8 articles
-                                        </span>
+                                        </a>
                                     </div>
                                     <div class="explore-topics-body">
                                         <ul class="explore-topics-list">
