--- a/single-element.html
+++ b/single-element.html
@@ -716,20 +716,20 @@
                                                         </span>
                                                     </a>
                                                     <ul class="list-unstyled dropdown_nav">
-                                                        <li class="nav-item no_icon page-item-2746">
-                                                            <a href="#blog-post-widget1" class="nav-link">
+                                                        <li class="nav-item no_icon">
+                                                            <a href="#bp-widget1" class="nav-link">
                                                                 01_Blog Post
                                                                 <span class="progress-indicator"></span>
                                                             </a>
                                                         </li>
-                                                        <li class="nav-item no_icon page-item-2746">
-                                                            <a href="#blog-post-widget2" class="nav-link">
+                                                        <li class="nav-item no_icon">
+                                                            <a href="#bp-widget2" class="nav-link">
                                                                 02_Blog Post
                                                                 <span class="progress-indicator"></span>
                                                             </a>
                                                         </li>
-                                                        <li class="nav-item no_icon page-item-2746">
-                                                            <a href="#blog-post-widget3" class="nav-link">
+                                                        <li class="nav-item no_icon">
+                                                            <a href="#bp-widget3" class="nav-link">
                                                                 03_Blog Post
                                                                 <span class="progress-indicator"></span>
                                                             </a>
@@ -2477,7 +2477,7 @@
                                             <p class="para-text">Effortless Online Documentation WordPress Theme, the Way It Should Be</p>
                                         </div>
 
-                                        <div id="blog-post-widget1" class="blog-post-widget widget-area">
+                                        <div id="bp-widget1" class="blog-post-widget widget-area">
                                             <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                                 <h3 class="title">01_Blog Post</h3>
                                                 <p class="para-text">Estimated reading: 3 minutes 991 views</p>
@@ -2540,7 +2540,7 @@
                                             </div>
                                             <!-- row end -->
                                         </div>
-                                        <div id="blog-post-widget2" class="blog-post-widget widget-area">
+                                        <div id="bp-widget2" class="blog-post-widget widget-area">
                                             <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                                 <h3 class="title">02_Blog Post</h3>
                                                 <p class="para-text">Estimated reading: 3 minutes 991 views</p>
@@ -2599,7 +2599,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div id="blog-post-widget3" class="blog-post-widget widget-area">
+                                        <div id="bp-widget3" class="blog-post-widget widget-area">
                                             <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                                 <h3 class="title">03_Blog Post</h3>
                                                 <p class="para-text">Estimated reading: 3 minutes 991 views</p>
