--- a/two-columns.html
+++ b/two-columns.html
@@ -487,9 +487,9 @@
                                                 <a href="">Elements</a>
                                             </h3>
                                         </div>
-                                        <span class="number-of-article">
+                                        <a href="" class="number-of-article">
                                             8 articles
-                                        </span>
+                                        </a>
                                     </div>
                                     <div class="explore-topics-body">
                                         <ul class="explore-topics-list">
@@ -520,9 +520,9 @@
                                                 <a href="">Content</a>
                                             </h3>
                                         </div>
-                                        <span class="number-of-article">
+                                        <a href="" class="number-of-article">
                                             8 articles
-                                        </span>
+                                        </a>
                                     </div>
                                     <div class="explore-topics-body">
                                         <ul class="explore-topics-list">
@@ -552,9 +552,9 @@
                                                 <a href="">Layouts</a>
                                             </h3>
                                         </div>
-                                        <span class="number-of-article">
+                                        <a href="" class="number-of-article">
                                             8 articles
-                                        </span>
+                                        </a>
                                     </div>
                                     <div class="explore-topics-body">
                                         <ul class="explore-topics-list">
@@ -586,9 +586,9 @@
                                                 <a href="">Change Logs</a>
                                             </h3>
                                         </div>
-                                        <span class="number-of-article">
+                                        <a href="" class="number-of-article">
                                             8 articles
-                                        </span>
+                                        </a>
                                     </div>
                                     <div class="explore-topics-body">
                                         <ul class="explore-topics-list">
@@ -618,9 +618,9 @@
                                                 <a href="">Blog Post</a>
                                             </h3>
                                         </div>
-                                        <span class="number-of-article">
+                                        <a href="" class="number-of-article">
                                             8 articles
-                                        </span>
+                                        </a>
                                     </div>
                                     <div class="explore-topics-body">
                                         <ul class="explore-topics-list">
@@ -650,9 +650,9 @@
                                                 <a href="">Footer</a>
                                             </h3>
                                         </div>
-                                        <span class="number-of-article">
+                                        <a href="" class="number-of-article">
                                             8 articles
-                                        </span>
+                                        </a>
                                     </div>
                                     <div class="explore-topics-body">
                                         <ul class="explore-topics-list">
